add html parser code

--- a/assets/article_detail.html
+++ b/assets/article_detail.html
@@ -46,18 +46,18 @@
                 margin-top: 34px;
             }
 
-            .imgTop {
+            .thumbnail {
                 border-bottom: 2px solid #AD8A54;
             }
 
-            .singleArticle {
+            .article {
                 padding: 15px;
                 padding-bottom: 35px;
                 font-style: normal;
                 color: #1C1C1C;
             }
 
-            .articleTit {
+            .articleHead {
                 color: #1C1C1C;
             }
             
@@ -83,7 +83,7 @@
                 letter-spacing: 1px;
             }
 
-            .spTitle {
+            .title {
                 font-size: 29px;
                 line-height: 35px;
                 color: #000;
@@ -99,7 +99,7 @@
                 display: block;
             }
 
-            .describe {
+            .lead {
                 margin-top: 38px;
                 margin-bottom: 34px;
                 font-size: 17px;
@@ -119,19 +119,19 @@
     </head>
     <body>
         <p>
-            <div class="imgTop">
+            <div class="thumbnail">
                 <img src="%s"/>
             </div>
 
-            <div class="singleArticle">
-                <div class="articleTit">
+            <div class="article">
+                <div class="articleHead">
                     <div class="r1">
                         <span class="category">文字</span> 
                         <span class="updateDate">%s</span>
                     </div>
-                    <h1 class="spTitle">%s</h1>
+                    <h1 class="title">%s</h1>
                     <h6 class="author">%s</h6>
-                    <h5 class="describe">%s</h5>
+                    <h5 class="lead">%s</h5>
                 </div>
 
                 <hr />
